--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/charlesdobson/slackbot-starter.git"
   },
   "scripts": {
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --fix",
     "serve": "NODE_ENV=development nodemon --exec 'ts-node' src/index.ts",
     "start": "NODE_ENV=production ts-node src/index.ts"
   },
